resized the client logos for responsiveness, which fixed the about page being too wide

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -738,7 +738,7 @@ nav .left-nav #hamburger-container button {
   padding: 12px;
 }
 .client-logo img {
-  max-height: 80px;
+  max-height: 40px;
   width: -moz-fit-content;
   width: fit-content;
   -o-object-fit: contain;
@@ -985,8 +985,8 @@ nav .left-nav #hamburger-container button {
     grid-template-columns: repeat(2, minmax(0, 1fr));
     grid-template-areas: "burger aurea" "pokedex regan";
   }
-  .client-logo {
-    max-height: 100px;
+  .client-logo img {
+    max-height: 80px;
   }
   #photo-page .photo-card-container {
     display: grid;
@@ -1075,6 +1075,9 @@ nav .left-nav #hamburger-container button {
   }
   .right-exhibitions {
     width: 48%;
+  }
+  .client-logo img {
+    max-height: 100px;
   }
   #project-page .project-container {
     display: flex;
