--- a/src/css/modules/responsive/_desktop.scss
+++ b/src/css/modules/responsive/_desktop.scss
@@ -111,6 +111,10 @@
     width: 48%;
   }
 
+  .client-logo img {
+    max-height: 100px;
+  }
+
   // ------------------------ Projects ------------------------
   #project-page {
     .project-container {
