--- a/src/css/modules/responsive/_mobile.scss
+++ b/src/css/modules/responsive/_mobile.scss
@@ -844,7 +844,7 @@ figure {
   border-radius: $med-margin;
   padding: $med-margin;
   img {
-    max-height: 80px;
+    max-height: 40px;
     width: fit-content;
     object-fit: contain;
   }
