--- a/src/css/modules/responsive/_tablet.scss
+++ b/src/css/modules/responsive/_tablet.scss
@@ -220,8 +220,8 @@
   //   }
   // }
 
-  .client-logo {
-    max-height: 100px;
+  .client-logo img {
+    max-height: 80px;
   }
 
   // ------------------------ Photography ------------------------
